--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -219,7 +219,7 @@
     grid-template-areas:
       "home github linkedIn"
       "tripleten . .";
-    width: 100%;
+    /* width: 100%; */
     margin-right: 16px;
     margin-left: 16px;
     margin-top: 9px;
