--- a/src/components/MobileMenu/MobileMenu.css
+++ b/src/components/MobileMenu/MobileMenu.css
@@ -4,7 +4,7 @@
   left: 0;
   bottom: 0;
   width: 102%;
-  height: 103%;
+  height: 102%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
   display: flex;
