--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,9 +3,9 @@
   /* flex-direction: row; */
   justify-content: space-between;
   align-items: center;
-  /* box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2); */
-  border-bottom: 1px solid rgb(255, 255, 255, 0.2);
-  filter: drop-shadow(0px -1px 0px rgb(255, 255, 255, 0.2));
+  box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+  /* border-bottom: 1px solid rgb(255, 255, 255, 0.2);
+  filter: drop-shadow(0px -1px 0px rgb(255, 255, 255, 0.2)); */
   max-height: 80px;
   width: 100%;
 }
@@ -96,8 +96,9 @@
   color: rgba(26, 27, 34, 1);
 }
 .nav__highlight-active_dark {
-  /* box-shadow: 0px 3px 0px 0px #000; */
-  color: red;
+  /* box-shadow: inset 0px -3px 0px rgba(26, 27, 34, 1); */
+  /* color: red; */
+  border-bottom: 3px solid black;
 }
 
 .nav__home:hover {
@@ -186,7 +187,7 @@
     margin: 0 40px 0 0;
   }
   .nav__logo {
-    margin: 0 0 0 80px;
+    margin: 0 0 0 104px;
   }
 }
 
@@ -200,7 +201,7 @@
     margin: 0 40px 0 0;
   }
   .nav__logo {
-    margin: 0 0 0 80px;
+    margin: 0 0 0 50px;
   }
 
   .nav__home {
@@ -210,7 +211,7 @@
   }
 
   .nav__signin {
-    width: 152px;
+    width: 140px;
     height: 40px;
     font-size: 16px;
     margin: 30px 0 18px 0;
@@ -222,7 +223,7 @@
   .nav__logout-button {
     width: 112px;
     height: 48px;
-    margin: 25px 0 18px 0;
+    margin: 28px 0 18px 0;
   }
 }
 @media screen and (max-width: 767px) {
@@ -232,27 +233,30 @@
 
   .nav__logo {
     font-size: 20px;
-    margin: 23px 0 18px 40px;
+    margin: 23px 0 18px 32px;
   }
   .nav__right {
     gap: 16px;
     margin: 0 30px 0 0;
   }
   .nav__home {
-    margin-top: 23px;
+    margin-top: 18px;
+    margin-bottom: 18px;
   }
 
   .nav__signin {
-    width: 112px;
-    height: 48px;
-    margin: 32px 16px 18px 0;
+    margin: 40px 0px 18px 16px;
   }
   .nav__articles {
     font-size: 16px;
-    margin: 23px 8px 8px 0;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 18px;
+    margin-top: 16px;
   }
   .nav__logout-button {
-    margin: 35px 0 18px 0;
+    font-size: 16px;
+    margin: 32px 0px 18px 16px;
   }
 }
 
