--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -208,14 +208,15 @@
 
   .search__title {
     font-size: 30px;
-    width: 270px;
+    width: 272px;
     height: 80px;
     margin-bottom: 16px;
-    width: 100%;
+    /* width: 100%; */
   }
 
   .search__info {
-    width: 100%;
+    /* width: 100%; */
+    width: 272px;
     height: 72px;
     font-size: 18px;
   }
